change JRE options to java 11 ones